# sample-agentic-attack-tree-generator

./: .gitignore  404.html  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  run_threatforest.py  sitemap.xml
about/acknowledgments/: index.html
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
about/security/: index.html
advanced/customization/: index.html
advanced/multi-provider/: index.html
advanced/performance/: index.html
advanced/security/: index.html
advanced/troubleshooting/: index.html
api/agents/: index.html
api/models/: index.html
api/orchestrator/: index.html
api/workflow-tools/: index.html
architecture/agents/: index.html
architecture/mitre-attack-mapping/: index.html
architecture/overview/: index.html
architecture/state-management/: index.html
architecture/strands-integration/: index.html
architecture/workflow-stages/: index.html
contributing/: index.html
contributing/code-style/: index.html
contributing/development/: index.html
contributing/testing/: index.html
docs/: faq.md  index.md
docs/about/: changelog.md  contributing.md  license.md
docs/architecture/: overview.md
docs/getting-started/: first-analysis.md  index.md  quick-start.md
docs/how-it-works/: index.md  phases.md
docs/javascripts/: extra.js
docs/user-guide/: index.md  preparing-your-project.md  running-threatforest.md  understanding-results.md
examples/: index.html
examples/healthcare/: index.html
examples/iot/: index.html
examples/microservices/: index.html
examples/vehicle-platform/: index.html
faq/: index.html
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/first-analysis/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
how-it-works/: index.html
how-it-works/phases/: index.html
includes/abbreviations/: index.html
javascripts/: extra.js  extra.min.js
modules/: index.html
modules/agents/: index.html
modules/core/: index.html
modules/graph/: index.html
modules/visualization/: index.html
modules/workflow/: index.html
sample-applications/ecommerce-platform/: README.md  threats.md
sample-applications/genai-chatbot/: genaichatbot-dfd.mmd
sample-applications/hcls-example/: Healthcare_Analytics_Platform_generated_threat_statements.md  overview.md
sample-applications/iot-device-management/: README.md
sample-applications/microservices-api/: README.md
sample-applications/vehicle-charging-example/: overview.md
sample-applications/vehicle-platform/: ThreatComposer_Workspace_Vehicle-Connected Platform.tc.json
search/: search_index.json
src/threatforest/: __init__.py  cli.py  config.py  config.yaml  orchestrator.py
src/threatforest/modules/agents/: __init__.py  context_extractor_agent.py  parser_agent.py  repository_analysis_agent.py  threat_generation_agent.py  tree_generator_agent.py
src/threatforest/modules/cli/: __init__.py  display.py  runner.py  (+1 more)
src/threatforest/prompts/: context-extraction.md  generate-attack-trees.md  mermaid-prompt.md  mitigations.md  project-analysis.md  repository-analysis.md  threat-format-fixing.md  threat-generation-existing.md  threat-generation-new.md  threat-mixed-format.md  threat-parsing.md  ttc-attack-step-mapping.md  ttc-full-tree-mapping.md  ttc-mapping.md
stylesheets/: extra.css
tags/: index.html
tests/: test_agents_integration.py  test_attack_tree_models.py  test_attack_tree_models_simple.py  test_config.py  test_parser_formats.py  test_parser_formats_simple.py  test_project_models.py  test_project_models_simple.py  test_read_only_editor.py  test_threat_models.py  test_threat_models_simple.py  test_threatcomposer_parsing.py  test_ui_display.py
tests/fixtures/: threats.json  threats.md  threats.tc.json  threats.yaml
user-guide/: index.html
user-guide/cli-reference/: index.html
user-guide/dashboard/: index.html
user-guide/ide-integration/: index.html
user-guide/input-formats/: index.html
user-guide/output-files/: index.html
user-guide/preparing-your-project/: index.html
user-guide/running-threatforest/: index.html
user-guide/understanding-results/: index.html
user-guide/workflows/: index.html
(+68 files in other folders)
